# refinery

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  texts.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: RELEASE_CHECKLIST.md  _config.yml  index.html
refs/: README.md
refs/ljspeech_linda_johnson/: LJ001-0012.lab  LJ001-0014.lab  LJ001-0017.lab  LJ001-0018.lab  LJ001-0021.lab
scripts/: install-fish-macos.sh  start-fish-macos.sh  transcribe-ref-labs-local.sh  transcribe_ref_labs.py  uninstall-fish-macos.sh
static/: app.js  style.css
templates/: index.html
tests/: test_app.py  test_transcribe_ref_labs.py
