[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "refinery"
version = "0.1.0"
description = "A/B testing tool for optimizing Fish Audio and Fish-Speech reference audio selection"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = [
    "fish-audio",
    "fish-speech",
    "tts",
    "voice-cloning",
    "speech-synthesis",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "ormsgpack>=1.5.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.11.0"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff.format]
docstring-code-format = true

[project.urls]
Homepage = "https://github.com/mikeharty/refinery"
Repository = "https://github.com/mikeharty/refinery"
Issues = "https://github.com/mikeharty/refinery/issues"
